# sdae

./: .env.example  .gitattributes  .gitignore  README.md  check_db.py  config.py  daemon_out.txt  gaps.txt  git_push.bat  git_push2.bat  launch_test.bat  main.py  pyproject.toml  requirements.txt  run_debug.bat  run_sdae.bat  run_test.bat  run_test2.bat  self_upgrader.py  start_daemon.bat  start_upgrader.bat  test_score.py
agents/: __init__.py  coordinator.py  spawner.py
core/: __init__.py  context_mgr.py  daemon.py.bak  permission.py  query_engine.py  router.py  scheduler.py
exec/: __init__.py  builder.py  deployer.py  executor.py  worktree.py
intel/: __init__.py  researcher.py  scanner.py  scorer.py  scorer.py.bak  world_model.py
memory/: __init__.py  cold.py  compressor.py  engine.py  extractor.py  hot.py  warm.py
outcomes/: __init__.py  fitness.py.bak  learner.py  reporter.py  revenue.py
tests/: test_smoke.py
