[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sdae"
version = "0.1.0"
description = "Self-Directed Autonomous Entity — scans markets, builds software, ships it, learns from outcomes"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["autonomous-agent", "llm", "ollama", "self-directed", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ollama>=0.2.0",
    "chromadb>=0.4.0",
    "loguru>=0.7.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "gitpython>=3.1.0",
    "schedule>=1.2.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "duckduckgo-search>=6.0.0",
]

[project.scripts]
sdae = "main:app"

[project.urls]
Repository = "https://github.com/77svene/sdae"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
